force-app/main/default/objects/Pickup_Address_Mapping__c/Pickup_Address_Mapping__c.object-meta.xml
<CustomObject>
    <label>Oracle Site Mapping</label>
    <nameField>
        <label>Pickup Address Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oracle Site Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>