force-app/main/default/objects/Pickup_Address_Mapping__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Address Name</label>
    <referenceTo>AddressBook__c</referenceTo>
    <relationshipLabel>Oracle Site Mappings</relationshipLabel>
    <relationshipName>Oracle_Site_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>