force-app/main/default/objects/Pickup_Address_Mapping__c/fields/Address_ID__c.field-meta.xml
<CustomField>
    <fullName>Address_ID__c</fullName>
    <label>Address ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>