force-app/main/default/objects/Pickup_Address_Mapping__c/fields/Address_Number__c.field-meta.xml
<CustomField>
    <fullName>Address_Number__c</fullName>
    <label>Salesforce Address Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>