force-app/main/default/objects/Pickup_Address_Mapping__c/fields/AWS_SYNC_Status__c.field-meta.xml
<CustomField>
    <fullName>AWS_SYNC_Status__c</fullName>
    <label>AWS SYNC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>