force-app/main/default/objects/Pickup_Address_Mapping__c/fields/Oracle_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Site_ID__c</fullName>
    <label>Oracle Site ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>