force-app/main/default/objects/Pickup_Address_Mapping__c/fields/Oracle_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Site_Name__c</fullName>
    <formula>Address__r.Oracle_Site_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oracle Site Name</label>
    <type>Text</type>
</CustomField>