force-app/main/default/objects/Pickup_Address_Mapping__c/fields/Registered_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Registered_Account_ID__c</fullName>
    <label>Registered Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>